syntax = "proto3";
package mobiuspace.adx.log.detail.body ;
import "base/adx_demand_context.proto";

//dsp 请求日志实体
message AdxDemandRequest {
  base.AdxDemandContext demandContext = 1 ;
  string url = 2 ;
  string method = 3 ;
  RequestHeader header = 4;
  RequestBody body = 5 ;
}

message RequestHeader {
  map<string,string> headers = 1 ;
}

message RequestBody {
  //TODO
}

