syntax = "proto3";
option java_package = "com.mobiu.kafka";
option java_outer_classname = "DemoInfo";
//option java_multiple_files = true;//编译后会生成多个Message类
import "google/protobuf/any.proto";

message Demo{
  string name = 1 ;
  int32 age = 2 ;
  repeated string hobbies = 3 ;
//  map<string,google.protobuf.Any> data = 5 ;
//  string hello = 6 ;

  enum SexType{
    M = 0 ;
    F = 1 ;
  }

  SexType sex = 4 ;
}